--- a/app/src/main/res/layout/activity_informationjame.xml
+++ b/app/src/main/res/layout/activity_informationjame.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         />
     <ImageView
-        android:layout_width="330dp"
+        android:layout_width="310dp"
         android:layout_height="270dp"
         android:layout_gravity="center"
         android:src="@drawable/jame1" />
@@ -76,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Facebook"
-            android:backgroundTint="#4682B4"
+            android:backgroundTint="#66CCFF"
             android:translationY="10dp"
             android:layout_gravity="center"
             />
