--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,28 +8,22 @@
     android:background="@drawable/circuit"
     tools:context=".MainActivity2">
 
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/logo1"
         android:drawablePadding="20dp"
-        android:text="
-        \nตารางเรียน  2565/2
-        \n"
+        android:text="\n                    ตารางเรียน  2565/2 \n"
         android:textColor="@color/black"
         android:textSize="22dp"
         android:textStyle="bold" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_baseline_library_books_24"
         android:drawablePadding="10dp"
-        android:text=": GESC104 : สิ่งแวดล้อมและคุณภาพชีวิต"
+        android:text=": GESC104 : สิ่งแวดล้อมและคุณภาพชีวิต "
         android:textColor="@color/black"
         android:textSize="17dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,17 +32,15 @@
         android:text=": 9.00 /12.00 / ห้อง 19701"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="10dp"
-        android:text=": อาจารย์ กัญญารัตน์ เดือนหงาย"
+        android:text=": อาจารย์ กัญญารัตน์ เดือนหงาย "
         android:textColor="@color/black"
-        android:textSize="19dp" />
+        android:textSize="19dp"  />
     --------------------------------------------------------------
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,7 +49,6 @@
         android:text=": GESC102 : การจัดการเพื่อคุณภาพชีวิต"
         android:textColor="@color/black"
         android:textSize="17dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,7 +57,6 @@
         android:text=": จ./ 16.00/19.00 / ห้อง 14501"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,9 +65,7 @@
         android:text=": อาจารย์ ชัญญภัทร นกมั่น"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
-    --------------------------------------------------------------
-
+    -------------------------------------------------------------
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -86,7 +74,6 @@
         android:text=": SCCG407 : เครือข่ายคอมพิวเตอร์และการสือสาร"
         android:textColor="@color/black"
         android:textSize="17dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,7 +82,6 @@
         android:text=": พ./ 8.00/12.00 /ห้อง 24209"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -104,9 +90,7 @@
         android:text=": ผู้ช่วยศาสตราจารย์ เจษฎาพร ปาคำวัง"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     --------------------------------------------------------------
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -115,7 +99,6 @@
         android:text=": SCCS203 : เทคโนโลยีอินเทอร์เน็ตและการพัฒนา"
         android:textColor="@color/black"
         android:textSize="17dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -124,7 +107,6 @@
         android:text=": พฤ./ 8.00/12.00 / ห้อง 24309"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -132,9 +114,8 @@
         android:drawablePadding="10dp"
         android:text=": อาจารย์ ยุพา คำตะพล"
         android:textColor="@color/black"
-        android:textSize="19dp" />
+        android:textSize="19dp"/>
     --------------------------------------------------------------
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -143,7 +124,6 @@
         android:text=": SCIT205:การพัฒนาโปรแกรมประยุกต์บนอุปกรณ์"
         android:textColor="@color/black"
         android:textSize="17dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -152,7 +132,6 @@
         android:text=": พฤ./ 13.00/17.00 / ห้อง 24308"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -162,7 +141,6 @@
         android:textColor="@color/black"
         android:textSize="19dp" />
     --------------------------------------------------------------
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -171,7 +149,6 @@
         android:text=": SCIT102 : ระบบฐานข้อมูล"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -180,7 +157,6 @@
         android:text=": ศ./ 9.00/12.00 / ห้อง 24207"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -190,7 +166,6 @@
         android:textColor="@color/black"
         android:textSize="19dp" />
     --------------------------------------------------------------
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -199,7 +174,6 @@
         android:text=": SCIT405 : คอมพิวเตอร์กราฟิกและแอนิเมชั่น"
         android:textColor="@color/black"
         android:textSize="17dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -208,7 +182,6 @@
         android:text=": ชศ./ 13.00/17.00 / ห้อง 24308"
         android:textColor="@color/black"
         android:textSize="19dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -218,7 +191,6 @@
         android:textColor="@color/black"
         android:textSize="19dp" />
     --------------------------------------------------------------
-
     <Button
         android:id="@+id/btnback02"
         android:layout_width="wrap_content"
