--- a/app/src/main/res/layout/activity_main_information.xml
+++ b/app/src/main/res/layout/activity_main_information.xml
@@ -21,7 +21,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="320dp"
+        android:layout_height="360dp"
         android:layout_gravity="center"
         android:orientation="vertical"
         tools:ignore="UselessParent">
@@ -30,21 +30,21 @@
             android:id="@+id/btn01"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#66FFFF"
+            android:backgroundTint="#00CCFF"
             android:drawableLeft="@drawable/ic_baseline_person_24"
             android:onClick="NextPage1"
             android:padding="10dp"
             android:text="ข้อมูลนักศึกษา"
             android:textColor="@color/black"
             android:textSize="18dp"
-            android:translationY="5dp" />
+            android:translationY="25dp" />
 
         <Button
             android:id="@+id/btn02"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="#66FFFF"
+            android:layout_marginTop="60dp"
+            android:backgroundTint="#00CCFF"
             android:drawableLeft="@drawable/ic_baseline_menu_book_24"
             android:onClick="NextPage2"
             android:padding="10dp"
@@ -57,8 +57,8 @@
             android:id="@+id/buttonSend0"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="#66FFFF"
+            android:layout_marginTop="35dp"
+            android:backgroundTint="#00CCFF"
             android:drawableLeft="@drawable/ic_baseline_email_24"
             android:padding="10dp"
             android:text="เกี่ยวกับ"
@@ -69,8 +69,8 @@
             android:id="@+id/btnlogout"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="#66FFFF"
+            android:layout_marginTop="35dp"
+            android:backgroundTint="#00CCFF"
             android:drawableLeft="@drawable/ic_baseline_logout_24"
             android:onClick="backPage3"
             android:padding="10dp"
@@ -87,6 +87,6 @@
         android:layout_gravity="center"
         android:text="@string/app_name"
         android:textSize="15dp"
-        android:translationY="160dp"
+        android:translationY="140dp"
         />
 </LinearLayout>
