--- a/app/src/main/res/layout/activity_informationboat.xml
+++ b/app/src/main/res/layout/activity_informationboat.xml
@@ -24,8 +24,10 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="HOME"
-            android:layout_marginStart="135dp"
+            android:layout_marginStart="125dp"
             android:textSize="16dp"
+            android:drawableLeft="@drawable/ic_baseline_home_24"
+
             android:onClick="backPageHome3"
             android:layout_toEndOf="@+id/left_icon1"/>
         <ImageView
