--- a/app/src/main/res/layout/activity_inforationoat.xml
+++ b/app/src/main/res/layout/activity_inforationoat.xml
@@ -24,9 +24,11 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="HOME"
-            android:layout_marginStart="135dp"
+            android:layout_marginStart="125dp"
             android:textSize="16dp"
             android:onClick="backPageHome5"
+            android:drawableLeft="@drawable/ic_baseline_home_24"
+
             android:layout_toEndOf="@+id/left_icon3"/>
         <ImageView
             android:onClick="NextPage1"
