--- a/app/src/main/res/layout/activity_informationpu.xml
+++ b/app/src/main/res/layout/activity_informationpu.xml
@@ -25,8 +25,9 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="HOME"
+            android:drawableLeft="@drawable/ic_baseline_home_24"
             android:onClick="backPageHome"
-            android:layout_marginStart="135dp"
+            android:layout_marginStart="125dp"
             android:textSize="16dp"
             android:layout_toEndOf="@+id/left_icon001"/>
         <ImageView
