--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,63 +8,64 @@
     android:background="@drawable/circuit"
     tools:context=".MainActivity2">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawablePadding="20dp"
-        android:text="\n                    ตารางเรียน  2565/2 \n"
-        android:textColor="@color/black"
-        android:textSize="22dp"
-        android:textStyle="bold" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_baseline_library_books_24"
-        android:drawablePadding="10dp"
-        android:text=": GESC104 : สิ่งแวดล้อมและคุณภาพชีวิต "
-        android:textColor="@color/black"
-        android:textSize="17dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_baseline_access_time_filled_24"
-        android:drawablePadding="10dp"
-        android:text=": 9.00 /12.00 / ห้อง 19701"
-        android:textColor="@color/black"
-        android:textSize="19dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:drawablePadding="10dp"
-        android:text=": อาจารย์ กัญญารัตน์ เดือนหงาย "
-        android:textColor="@color/black"
-        android:textSize="19dp"  />
-    --------------------------------------------------------------
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_baseline_library_books_24"
-        android:drawablePadding="10dp"
-        android:text=": GESC102 : การจัดการเพื่อคุณภาพชีวิต"
-        android:textColor="@color/black"
-        android:textSize="17dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_baseline_access_time_filled_24"
-        android:drawablePadding="10dp"
-        android:text=": จ./ 16.00/19.00 / ห้อง 14501"
-        android:textColor="@color/black"
-        android:textSize="19dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:drawablePadding="10dp"
-        android:text=": อาจารย์ ชัญญภัทร นกมั่น"
-        android:textColor="@color/black"
-        android:textSize="19dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:text="\nตารางเรียน  2565/2 \n"
+                android:textColor="@color/black"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+            <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_baseline_library_books_24"
+            android:drawablePadding="10dp"
+            android:text=": GESC104 : สิ่งแวดล้อมและคุณภาพชีวิต "
+            android:textColor="@color/black"
+            android:textSize="17dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_baseline_access_time_filled_24"
+            android:drawablePadding="10dp"
+            android:text=": 9.00 /12.00 / ห้อง 19701"
+            android:textColor="@color/black"
+            android:textSize="19dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_baseline_person_24"
+            android:drawablePadding="10dp"
+            android:text=": อาจารย์ กัญญารัตน์ เดือนหงาย "
+            android:textColor="@color/black"
+            android:textSize="19dp"  />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_baseline_library_books_24"
+            android:drawablePadding="10dp"
+            android:text=": GESC102 : การจัดการเพื่อคุณภาพชีวิต"
+            android:textColor="@color/black"
+            android:textSize="17dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_baseline_access_time_filled_24"
+            android:drawablePadding="10dp"
+            android:text=": จ./ 16.00/19.00 / ห้อง 14501"
+            android:textColor="@color/black"
+            android:textSize="19dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_baseline_person_24"
+            android:drawablePadding="10dp"
+            android:text=": อาจารย์ ชัญญภัทร นกมั่น"
+            android:textColor="@color/black"
+            android:textSize="19dp" />
     -------------------------------------------------------------
     <TextView
         android:layout_width="match_parent"
@@ -190,7 +191,7 @@
         android:text=": อาจารย์ ศรัญญา ตรีทศ"
         android:textColor="@color/black"
         android:textSize="19dp" />
-    --------------------------------------------------------------
+
     <Button
         android:id="@+id/btnback02"
         android:layout_width="wrap_content"
