--- a/app/src/main/res/layout/activity_inforationoat.xml
+++ b/app/src/main/res/layout/activity_inforationoat.xml
@@ -50,14 +50,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="      \n          รหัส นศ. : 641102064114    \n
-        \n          ชื่อ : นายณัฐวุฒิ โพธิ์ศรีทอง   \n
-        \n          ชื่อ(Eng) : Mr.Nutthawut Phosrithong    \n
-        \n          คณะ : วิทยาศาสตร์และเทคโนโลยี   \n
-        \n          สาขา : วิทยาการคอมพิวเตอร์  \n
-        \n          เข้าศึกษาเมื่อปี : 1/2564
-"
-
+        android:text="
+        \nรหัส นศ. : 641102064114    \n
+        \nชื่อ : นายณัฐวุฒิ โพธิ์ศรีทอง   \n
+        \nชื่อ(Eng) : Mr.Nutthawut Phosrithong    \n
+        \nคณะ : วิทยาศาสตร์และเทคโนโลยี   \n
+        \nสาขา : วิทยาการคอมพิวเตอร์  \n
+        \nเข้าศึกษาเมื่อปี : 1/2564"
         android:textSize="19dp"
         android:textColor="@color/black"
         />
