--- a/app/src/main/res/layout/activity_main_information.xml
+++ b/app/src/main/res/layout/activity_main_information.xml
@@ -30,7 +30,7 @@
             android:id="@+id/btn01"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#00CCFF"
+            android:backgroundTint="#33FFFF"
             android:drawableLeft="@drawable/ic_baseline_person_24"
             android:onClick="NextPage1"
             android:padding="10dp"
@@ -44,7 +44,7 @@
             android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
-            android:backgroundTint="#00CCFF"
+            android:backgroundTint="#33FFFF"
             android:drawableLeft="@drawable/ic_baseline_menu_book_24"
             android:onClick="NextPage2"
             android:padding="10dp"
@@ -58,7 +58,7 @@
             android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
-            android:backgroundTint="#00CCFF"
+            android:backgroundTint="#33FFFF"
             android:drawableLeft="@drawable/ic_baseline_email_24"
             android:padding="10dp"
             android:text="เกี่ยวกับ"
@@ -70,7 +70,7 @@
             android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
-            android:backgroundTint="#00CCFF"
+            android:backgroundTint="#33FFFF"
             android:drawableLeft="@drawable/ic_baseline_logout_24"
             android:onClick="backPage3"
             android:padding="10dp"
