--- a/app/src/main/res/layout/activity_informationpeat.xml
+++ b/app/src/main/res/layout/activity_informationpeat.xml
@@ -61,13 +61,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="
-        \n          รหัส นศ. : 641102064111 \n
-        \n          ชื่อ : นายภัทร เที่ยงตรง    \n
-        \n          ชื่อ(Eng) : Mr.Phattara Thiangtrong \n
-        \n          คณะ : วิทยาศาสตร์และเทคโนโลยี   \n
-        \n          สาขา : วิทยาการคอมพิวเตอร์  \n
-        \n          เข้าศึกษาเมื่อปี : 1/2564"
-
+            \nรหัส นศ. : 641102064111 \n
+            \nชื่อ : นายภัทร เที่ยงตรง    \n
+            \nชื่อ(Eng) : Mr.Phattara Thiangtrong \n
+            \nคณะ : วิทยาศาสตร์และเทคโนโลยี   \n
+            \nสาขา : วิทยาการคอมพิวเตอร์  \n
+            \nเข้าศึกษาเมื่อปี : 1/2564"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
             android:textSize="19dp"
             android:textColor="@color/black"
             />
